Fix line spacing

--- a/styles/quotes.css
+++ b/styles/quotes.css
@@ -31,6 +31,7 @@ h2 {
 }
 
 h3 {
+  line-height:90%;
   color:#B43216; /*red*/
   font-family: 'neuzeit-grotesk', sans-serif;
   font-size: 18px;
