--- a/styles/work.css
+++ b/styles/work.css
@@ -64,11 +64,11 @@ and (-webkit-min-device-pixel-ratio: 2) {
   }
   h1, h3 {
     font-size: 180%!important;
-  line-height:90%;
+  line-height:130%;
   }
   h2 {
     font-size: 130%!important;
-  line-height:90%;
+  line-height:130%;
   }
 }
 
@@ -82,11 +82,11 @@ and (-webkit-min-device-pixel-ratio: 2){
   }
   h1, h3 {
     font-size: 180%!important;
-  line-height:90%;
+  line-height:130%;
   }
   h2 {
     font-size: 130%!important;
-  line-height:90%;
+  line-height:130%;
   }
 }
 
@@ -96,11 +96,11 @@ and (-webkit-min-device-pixel-ratio: 2){
   }
   h1, h3 {
     font-size: 180%!important;
-  line-height:90%;
+  line-height:130%;
   }
   h2 {
     font-size: 130%!important;
-  line-height:90%;
+  line-height:130%;
   }
 }
 
